--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
 
   web:
     build: ./backend
-    command: bash -c "python manage.py makemigrations Borrow && python manage.py makemigrations Room && python manage.py makemigrations Student && python manage.py makemigrations Add && python manage.py migrate && python manage.py populate_db && python manage.py runserver 0.0.0.0:8000"
+    command: bash -c "python manage.py makemigrations Borrow && python manage.py makemigrations Room && python manage.py makemigrations Student && python manage.py makemigrations Add && python manage.py makemigrations Remove &&  python manage.py migrate && python manage.py populate_db && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./backend:/app
     ports:
