--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,11 @@ version: "3.8"
 
 services:
   db:
-    image: postgres:latest
+    image: postgres:16
     environment:
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: mypassword
       POSTGRES_DB: postgres
-      POSTGRES_PORT: 5432
       POSTGRES_HOST_AUTH_METHOD: trust
     volumes:
       - postgres_data:/var/lib/postgresql/data
